change trigger action [no ci]

--- a/.github/workflows/trigger-sync.yaml
+++ b/.github/workflows/trigger-sync.yaml
@@ -17,4 +17,4 @@ jobs:
       with:
         token: ${{ secrets.DISPATCH_PAT }}
         repository: tool-jx3/ParatranzUploader
-        event-type: sync-from-assets
+        event-type: release-from-assets
